# SkillNet

./: .env.example  .gitignore  API_IMPLEMENTATION.md  CLAUDE.md  CONTROLLER_SETUP.md  ENV_CONFIG_SUMMARY.md  ENV_SETUP.md  HOW_TO_USE.md  INSTALLATION_REPORT.md  PROJECT_READY.md  README.md  pyproject.toml  quick_start.py  run_api.py  test_sdk.py
.claude/: settings.local.json
.github/workflows/: skill-review.yml
docs/: 01-project-overview.md  02-directory-structure.md  03-learning-path.md  04-architecture-design.md  05-api-reference.md  README.md
examples/JiuwenClaw/: README.md
skillnet-ai/: pyproject.toml
skillnet-ai/src/controller/: README.md  __init__.py  dependencies.py  main.py
skillnet-ai/src/controller/models/: requests.py
skillnet-ai/src/controller/routes/: analyze.py  create.py  download.py  evaluate.py  tasks.py
skillnet-ai/src/skillnet_ai/: __init__.py  analyzer.py  cli.py  client.py  creator.py  evaluator.py  prompts.py
skillnet-ai/src/skillnet_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skillnet-ai/src/skillnet_ai/api/: __init__.py  background_tasks.py  dependencies.py  main.py
skillnet-ai/src/skillnet_ai/api/models/: __init__.py  requests.py  responses.py
skillnet-ai/src/skillnet_ai/api/routes/: __init__.py  analyze.py  create.py  download.py  evaluate.py  search.py  tasks.py
