[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillnet-ai"
version = "0.0.17"
description = "Official Python SDK for SkillNet: Create, Evaluate, and Connect AI Skills."
readme = "README.md"
authors = [{ name = "SkillNet Team", email = "liangyuannnnn@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5,<3",
    "openai>=1.109.1",
    "pydantic>=2.12.5,<3",
    "tqdm>=4.67.1",
    "typer>=0.21.1,<1",
    "rich>=13.9.4",
    "PyPDF2>=3.0.1",
    "pycryptodome>=3.23.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "json-repair>=0.30.0",
    # FastAPI dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6"
]

[project.urls]
"Homepage" = "http://skillnet.openkg.cn"
"Source" = "https://github.com/zjunlp/SkillNet"

[project.scripts]
skillnet = "skillnet_ai.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
